<resources>
    <string name="app_name" translatable="false">AssistantDayr</string>
    <string name="bicycle">Bicycle</string>
    <string name="motocycle">Bike</string>
    <string name="clasic_mobile">ZAZ-968</string>
    <string name="zaz_razob">ZAZ-968 "Disassembled"</string>
    <string name="vaz2101">VAZ-2101</string>
    <string name="gaz24">GAZ-24</string>
    <string name="uaz">UAZ-469</string>
    <string name="uaz452">UAZ-452</string>
    <string name="gaz66">GAZ-66</string>
    <string name="zil130">ZIL-130</string>
    <string name="kamaz">Kamaz</string>
    <string name="bav485">BAV-485</string>
    <string name="kraz255">KrAZ-255</string>
    <string name="mi8">Mi-8</string>
    <string name="polar_atv">Arctic All-terrain vehicle</string>
    <string name="raft">Raft</string>
    <string name="motorboat">Motor boat</string>
    <string name="belaz">BelAZ</string>
    <string name="bicycle_cart">Bicycle with a cart</string>
    <string name="telega">Cart</string>
    <string name="motorized_cart">Motorized cart</string>
    <string name="broken_motorized_cart">Broken motorized cart</string>
    <string name="sorvigolova">Daredevil</string>
    <string name="sorvigolova_polet">Daredevil "FLIGHT"</string>
    <string name="electromobil">electric car</string>
    <string name="quests">QUESTS</string>
    <string name="medicamenti_menu">MEDICINE</string>
    <string name="eda_menu">FOOD</string>
    <string name="personasi_menu">CHARECTERS</string>
    <string name="komponenti_menu">COMPONENTS</string>
    <string name="vragi_menu">ENEMY</string>
    <string name="obmundirovanie_menu">UNIFORMS</string>
    <string name="oruzie_menu">WEAPON</string>
    <string name="transport_menu">TRANSPORT</string>
    <string name="vizivanie_menu">SURVIVAL</string>
    <string name="nastroiki_menu">SETTINGS</string>
    <string name="pogoda">Weather</string>
    <string name="sposobnosti">Perks</string>
    <string name="bolezni_travmi">Diseases and injuries</string>
    <string name="uroven_geroi">Character Level</string>
    <string name="karta">Global map</string>
    <string name="pokazateli_zizni">Vital signs</string>
    <string name="v_poiskah_istina_kvest">Searching for Truth</string>
    <string name="v_poiskah_istina_kvest_opisanie" translatable="false">В поисках истины — главный
        сюжетный квест в игре Day R. В ходе квеста игрок узнаёт об истории игрового мира и выясняет,
        что погубило человечество. Квест состоит из 28 этапов в которые входит как текстовые квесты,
    так и обычные.</string>
    <string name="trebuemiy_lvl">Required level</string>
    <string name="harakteristiki">SPECIFICATIONS</string>
    <string name="remont">REPAIR</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="razobran">disassembled</string>
    <string name="slomani">broken</string>
    <string name="instrumenti_nabor">Tool kit</string>
    <string name="celii">whole</string>
    <string name="sborka">ASSEMBLE</string>
    <string name="production_method">PRODUCTION METHOD</string>
    <string name="load_capacity">Load capacity</string>
    <string name="ves">Weight</string>
    <string name="max_mileage">Max. mileage</string>
    <string name="max_speed">Max. speed</string>
    <string name="opit_polucen">Experience</string>
    <string name="bicycle_parts">Bicycle parts</string>
    <string name="final_result">Final result</string>
    <string name="razborka">DISASSEMBLY</string>
    <string name="toplivo">Fuel</string>
    <string name="benzin">Gasoline</string>
    <string name="dizel">Diesel</string>
    <string name="rashod_topliva">Fuel consumption</string>
    <string name="remont_net">REPAIR - NO</string>
    <string name="cernie_rubli">Black rubles</string>
    <string name="produkt_kartocki">Food cards</string>
    <string name="avtozapcasti">Auto spare parts</string>
    <string name="maslo">Engine oil</string>
    <string name="provolka">Wire</string>
    <string name="wint">Screw</string>
    <string name="klei_izolenta">Glue or duct tape</string>
    <string name="sveca_zazigania">Spark plug</string>
    <string name="akb_sloman">Broken car battery</string>
    <string name="sini">Tires</string>
    <string name="rezinovie_detali">Rubber Parts</string>
    <string name="izolenta">Rope</string>
    <string name="akb">Battery</string>
    <string name="atom_battary">Atomic battery</string>
    <string name="sernaya_kislota">Sulfuric acid</string>
    <string name="provod">Cable</string>
    <string name="procent_25">+25%</string>
    <string name="procent_100" translatable="false">+100%</string>
    <string name="lom">Crowbar</string>
    <string name="rzaviy_lom">Rusted crowbar</string>
    <string name="nozovka">Hacksaw</string>
    <string name="generator">Generator</string>
    <string name="svarka">Welder</string>
    <string name="lopata">Shovel</string>
    <string name="rzavaya_lopata">Rusted shovel</string>
    <string name="rzavie_instrumenti">Rusted tools</string>
    <string name="instrumenti">Tool kit</string>
    <string name="rashod_0_100">0l/100km</string>
    <string name="rashod_7_100">7l/100km</string>
    <string name="rashod_9_100">9l/100km</string>
    <string name="rashod_11_100">11l/100km</string>
    <string name="kmh_0">0km/h</string>
    <string name="kmh_9">9km/h</string>
    <string name="kmh_20">20km/h</string>
    <string name="kmh_25">25km/h</string>
    <string name="kmh_30">30km/h</string>
    <string name="kmh_40">40km/h</string>
    <string name="kmh_50">50km/h</string>
    <string name="kmh_100">100km/h</string>
    <string name="kg_0">0kg</string>
    <string name="kg_35">35kg</string>
    <string name="kg_50">50kg</string>
    <string name="kg_70">70kg</string>
    <string name="kg_120">120kg</string>
    <string name="kg_300">300kg</string>
    <string name="kg_350">350kg</string>
    <string name="kg_500">500kg</string>
    <string name="kg_600">600kg</string>
    <string name="kg_666">666kg</string>
    <string name="kg_750">750kg</string>
    <string name="kg_850">850kg</string>
    <string name="kg_855" translatable="false">855kg</string>
    <string name="kg_955">955kg</string>
    <string name="km_0">0km</string>
    <string name="km_1000">1000km</string>
    <string name="km_3000">3000km</string>
    <string name="km_4000">4000km</string>
    <string name="km_10000">10000km</string>
    <string name="pcs_1">1pcs</string>
    <string name="pcs_0_1">0-1pcs</string>
    <string name="pcs_1_2">1-2pcs</string>
    <string name="pcs_2">2pcs</string>
    <string name="pcs_3">3pcs</string>
    <string name="pcs_4">4pcs</string>
    <string name="pcs_5">5pcs</string>
    <string name="pcs_6">6pcs</string>
    <string name="pcs_7">7pcs</string>
    <string name="pcs_8">8pcs</string>
    <string name="pcs_10">10pcs</string>
    <string name="pcs_12">12pcs</string>
    <string name="pcs_15">15pcs</string>
    <string name="pcs_20">20pcs</string>
    <string name="pcs_30">30pcs</string>
    <string name="pcs_40">40pcs</string>
    <string name="pcs_50">50pcs</string>
    <string name="pcs_100">100pcs</string>
    <string name="pcs_120">120pcs</string>
    <string name="pcs_540">540pcs</string>
    <string name="lvl_10">10lvl</string>
    <string name="lvl_20">20lvl</string>
    <string name="lvl_30">30lvl</string>
    <string name="xp_5" translatable="false">5xp</string>
    <string name="xp_30" translatable="false">30xp</string>
    <string name="xp_150" translatable="false">150xp</string>
    <string name="xp_850" translatable="false">850xp</string>
    <string name="gr_30">30gr</string>
    <string name="gr_40">40gr</string>
    <string name="gr_50">50gr</string>
    <string name="gr_100">100gr</string>
    <string name="gr_400">400gr</string>
    <string name="gr_500">500gr</string>
    <string name="gr_1000" translatable="false">1k</string>
    <string name="gr_7000" translatable="false">7k</string>
    <string name="procnost">Endurance</string>
    <string name="procnost_8000" translatable="false">8000</string>
    <string name="telega_description">A trolley is the simplest device for transporting goods. According to the game mechanics, it refers to light transport, since it occupies a slot designed for it in the equipment window. With a cart, the Survivor moves as slowly as on foot, however, he can take away a much larger load. When used as a vehicle, the trolley is subject to wear and can be repaired. When reaching 0% strength, it breaks and we get 2 parts of the bike. The trolley can also be used to assemble a bicycle with a trolley or disassembled into components.</string>
    <string name="telega_metod_polucenia" translatable="false">Купить в поселении под Ленинградом за 125 черных рублей. Найти случайным образом в следующих зданиях: Стройка (любой сектор). Воинская часть (склад)</string>
    <string name="bicycle_description" translatable="false">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью, однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком. Может быть целым, повреждённым и сломанным. При использовании в роли транспортного средства велосипед подвергается износу и может быть отремонтирован. При достижении 0% прочности он становится поврежденным. Поврежденный велосипед нельзя использовать по прямому назначению, а также разобрать на запчасти. Поврежденный велосипед можно отремонтировать. Ремонт поврежденного велосипеда не отличается от ремонта целого и ремонтируется на 25% прочности. Целый велосипед может быть использован для сборки велосипеда с тележкой.</string>
    <string name="bicycle_metod_polucenia" translatable="false">Целый велосипед можно собрать самостоятельно, начиная с 10 уровня. Требуется 6 очков исследований. По сценарию целый велосипед можно найти в убежищах возле Мурманска и Беломорска.</string>
    <string name="bicycle_slomaniy_description" translatable="false">Велосипед — лёгкий транспорт, обладающий минимальной грузоподъёмностью, однако, дающий существенную прибавку к скорости по сравнению с передвижением пешком. Может быть целым, повреждённым и сломанным.</string>
    <string name="bicycle_metod_polucenia_slomaniy" translatable="false">Сломанный велосипед можно случайным образом найти в следующих зданиях: \n- Школа (спортзал). \n- Почтовое отделение.\n- Уцелевший дом. \n- Дорога в городах.</string>
    <string name="bicycle_cart_description" translatable="false">Велосипед с тележкой — лёгкий транспорт, совмещающий в себе скорость велосипеда с грузоподъёмностью тележки.</string>
    <string name="bicycle_cart_metod_polucenia" translatable="false">Собрать велосипед с тележкой можно самостоятельно, начиная с 20 уровня или у мастера в поселении Олонец, при наличии компонентов для сборки.</string>
    <string name="motorized_cart_description" translatable="false">Мототележка — первый наземный бензиновый транспорт, доступный игроку, является модификацией велосипеда с тележкой. Обладает наименьшим расходом топлива среди среднего транспорта, но низкой скоростью и малой грузоподъёмностью. Бывает целая и сломанная. В отличие от большинства транспорта, целую мототележку нельзя разобрать или разломать на металлолом, а после поломки нельзя починить. Без топлива персонаж фактически несёт мототележку на себе, как и весь остальной транспорт, который обладает малым весом. \n- С v.708 можно использовать в квесте \"Просьба матери\".</string>
    <string name="motorized_cart_metod_polucenia" translatable="false">Единственным способом получения мототележки является самостоятельная сборка, начиная с 30 уровня; схема открывается за 6 очков исследований.</string>
    <string name="vaz2101_description_povrezden" translatable="false">Переходит в состояне повреджённого, когда запас прочности достигает 0%. </string>
    <string name="povrezden" translatable="false">повреждён</string>
</resources>